--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "trplanex": "^1.0.2",
+    "trplanex": "1.2.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
